# EcoMart

./: middleware.ts  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/(dashboard)/admin/: layout.tsx  page.tsx
app/(dashboard)/admin/analytics/: page.tsx
app/(dashboard)/cart/: page.tsx
app/(dashboard)/categories/: page.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/shop/: page.tsx
backend/: .env  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: payments.py  products.py
backend/app/core/: config.py
backend/app/models/: order.py  product.py
backend/app/schemas/: product.py
backend/app/services/: mpesa_service.py
components/: category-tabs.tsx  featured-products.tsx  footer.tsx  header.tsx  hero-section.tsx  product-grid.tsx
components/admin/: add-category-dialog.tsx  add-product-dialog.tsx  categories-table.tsx  customers-filter.tsx  customers-overview.tsx  customers-table.tsx  orders-filter.tsx  orders-overview.tsx  orders-table.tsx  overview.tsx  products-table.tsx  recent-orders.tsx  sidebar.tsx  stats.tsx  top-products.tsx
components/admin/analytics/: customers.tsx  period-select.tsx  products.tsx  sales.tsx
components/admin/settings/: notifications.tsx  payment.tsx  shipping.tsx  store.tsx
components/categories/: category-header.tsx  category-list.tsx
components/dashboard/: delivery-status.tsx  order-history.tsx  overview.tsx  stats.tsx
components/shop/: product-filters.tsx  product-grid.tsx  product-sort.tsx
lib/: auth.config.ts
(+5 files in other folders)
